--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install -r req.txt
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -26,4 +26,15 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Run ETL Process
+      env: # Or as an environment variable
+        GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.DEV_GOOGLE_JSON_KEY }}
+        bq_project_id: ${{ secrets.bq_project_id }}
+        bq_dataset_id: ${{ secrets.bq_dataset_id }}
+        bq_table_id: ${{ secrets.bq_table_id }}
+
+      run: |
+        echo $GOOGLE_APPLICATION_CREDENTIALS_JSON > keys.json
+        export GOOGLE_APPLICATION_CREDENTIALS=$PWD/keys.json
+        python main.py
 
